--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,14 +21,18 @@ p {
 /** start styles for header **/
 header {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
-    color: #ffffff;
 }
 
 header h1 {
     display: inline-block;
+}
+
+header h1 a {
     font-size: 48px;
+    text-decoration: none;
+    color: #ffffff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .seo {
